tests/error/tracing_errors/struct_change_ty_return.err
Error: Error in comptime function return (at $FILE:13:0)
   | 
11 | 
12 | @guppy.comptime(module)
13 | def test() -> S:
   | ^^^^^^^^^^^^^^^^
   | ...
16 |     return s
   | ^^^^^^^^^^^^

Field `x` of object with type `S` has an unexpected type. Expected `int`, got
`float`.

Guppy compilation failed due to 1 previous error
